connect with diesel

--- a/.env
+++ b/.env
@@ -1,8 +1,1 @@
-SERVER.HOST=127.0.0.1
-SERVER.PORT=3000
-PG.USER=cms
-PG.PASSWORD=cms
-PG.HOST=127.0.0.1
-PG.PORT=5432
-PG.DBNAME=cms
-PG.POOL.MAX_SIZE=30
+DATABASE_URL=postgres://cms:cms@127.0.0.1:5432/cms
