--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "0.2", features = ["macros"] }
 warp = "0.2"
-mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
-mobc = "0.5"
+log = "0.4"
+pretty_env_logger = "0.3"
+diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
